Fix width issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -192,4 +192,8 @@ span {
         align-items: center;
         justify-content: center;
     }
+
+    .product {
+        width: 50%;
+    }
 }
